--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,7 +7,8 @@
   <title>SourceHub</title>
   {% endif %}
 
-  {% include "/components/gtm.html" %}
+  <script type="text/javascript" src="{{ url_for('static', filename= 'js/gtm.js') }}"></script>
+
 </head>
 
 <body>
